--- a/src/content/docs/en/developers/guides/contract-deployment-tutorial.mdx
+++ b/src/content/docs/en/developers/guides/contract-deployment-tutorial.mdx
@@ -10,7 +10,7 @@ whatsnext: { "Scroll Messenger Cross-chain Interaction": "/developers/guides/scr
 
 import Aside from "../../../../../components/Aside.astro"
 
-The Scroll Sepolia Testnet allows anyone to deploy a smart contract on Scroll. In this tutorial, you will learn how to deploy a contract on Scroll Sepolia using common tools for developing on Ethereum. This [demo repo](https://github.com/scroll-tech/scroll-guides/tree/main/contract-deploy-demo) illustrates contract deployment with [Hardhat](https://hardhat.org/) and [Foundry](https://github.com/foundry-rs/foundry).
+The Scroll Sepolia Testnet allows anyone to deploy a smart contract on Scroll. In this tutorial, you will learn how to deploy a contract on Scroll Sepolia using common tools for developing on Ethereum. This [demo repo](https://github.com/scroll-tech/scroll-guides/tree/main/contract-deploy-demo) illustrates contract deployment with [Hardhat](https://hardhat.org/) and [Foundry](https://github.com/foundry-rs/foundry). We also have a [video tutorial](https://www.youtube.com/embed/Kdg-n298HuQ?si=j3ml3xkI3iYL5Qpt) for deploying with [Atlas](https://app.atlaszk.com).
 
 <Aside type="tip" title="Got Testnet ETH?">
   Before you start deploying the contract, you need to request test tokens from a Sepolia faucet and use the
@@ -18,6 +18,13 @@ The Scroll Sepolia Testnet allows anyone to deploy a smart contract on Scroll. I
   could acquire Scroll Sepolia ETH directly. See our [Faucet](/user-guide/faucet/) and [Bridge](/user-guide/bridge/)
   guides for help.
 </Aside>
+
+## Deploy contracts with Atlas
+
+0. [Get Metamask, sepolia eth, and bridge it to Scroll](https://www.youtube.com/embed/Kdg-n298HuQ?si=j3ml3xkI3iYL5Qpt) 
+1. Go to https://app.atlaszk.com
+2. Go to the top right and change the network to Scroll / Scroll testnet
+3. Press Deploy
 
 ## Deploy contracts with Hardhat
 
